Rename Index.html to index.html for GitHub Pages

--- a/csv-visualizer.html
+++ b/csv-visualizer.html
@@ -19,9 +19,9 @@
   <div class="blob blob-3"></div>
 
   <header>
-    <a href="Index.html" class="home-link" title="Back to HYA28 Toolkit">← Home</a>
+    <a href="index.html" class="home-link" title="Back to HYA28 Toolkit">← Home</a>
     <div class="header-inner">
-      <a href="Index.html" title="Back to HYA28 Toolkit"><img src="Logo_HYA28.png" alt="HYA28 Logo" class="header-logo"></a>
+      <a href="index.html" title="Back to HYA28 Toolkit"><img src="Logo_HYA28.png" alt="HYA28 Logo" class="header-logo"></a>
       <div>
         <h1>CSV Data Visualizer</h1>
         <p class="subtitle">Upload · Filter · Visualize · Download</p>
