Remove PNGs, rename to lowercase index.html, push latest changes

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
   <div class="glass-card">
     <div class="inner">
       <span class="emoji">💀</span>
-      If you've ever stared at a FASTA file at midnight wondering where your life went wrong,
+      If you've ever stared at a CSV file at midnight wondering where your life went wrong,
       this toolkit is for you. We don't judge, <strong>we've been there</strong>.
-      Your sequences are safe with us <em>(unlike that one time with the unsaved alignment).</em>
+      Your data is safe with us <em>(unlike that one time with the unsaved data file).</em>
     </div>
   </div>
 
